--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Fede\Descargas\zPorquerías\1298635458_Black_Star.ico,0
+IconResource=D:\Descargas\Icons\start.ico,0
 [ViewState]
 Mode=
 Vid=
